[tool.poetry]
name = "nextsignal"
version = "0.4.1"
description = "Servidor para escuchar FM con RTL-SDR (con interfaz web)"
authors = ["Aaron Gibson <eulersidcrisis@yahoo.com>", "Iván Gómez"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/nextsuite/nextsignal"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players"
]
include = [
    "pysdrweb/data/index.html",
    "pysdrweb/data/style.css",
    "pysdrweb/data/app.js",
    "pysdrweb/data/icono.png"
]
packages = [
    { include = "pysdrweb", from = "src/python" },
    { include = "pysdrweb_data", from = "src/web" }
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nextsuite/nextsignal/issues"

[tool.poetry.dependencies]
python = ">=3.8,<4"
tornado = "^6.1"
PyYAML = "^6.0"
click = "~8.0"
soundfile = ">=0.10,<1.0"
lameenc = { version = ">=1.3.1", optional = true }

[tool.poetry.extras]
mp3 =  [ "lameenc" ]


[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pylint = "^3.2.5"
mypy = "^1.10.1"

[tool.poetry.scripts]
pysdrweb_server = 'nextsignal.fmserver.server:fm_server_command'
# We'll keep this alias for legacy purposes.
sdrfm_server = 'nextsignal.fmserver.server:fm_server_command'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
